# immich

./: .gitignore  README.md  pnpm-lock.yaml
.codex/: agents.md
.github/workflows/: docker-build.yml
docker/: docker-compose.prod.yml  docker-compose.yml  example.env  immich-rs-truenas.yml
server-rs/: Cargo.toml  Dockerfile  MIGRATION_MATRIX.md
server-rs/migrations/: 0001_baseline.sql
server-rs/scripts/: immich-healthcheck
server-rs/src/: config.rs  crypto.rs  error.rs  jobs.rs  main.rs  ml.rs  models.rs
server-rs/src/controllers/: activity.rs  album.rs  api_key.rs  app.rs  asset.rs  auth.rs  auth_admin.rs  database_backup.rs  download.rs  duplicate.rs  face.rs  job.rs  library.rs  maintenance.rs  map.rs  memory.rs  mod.rs  notification.rs  notification_admin.rs  oauth.rs  partner.rs  person.rs  plugin.rs  queue.rs  search.rs  server.rs  session.rs  shared_link.rs  socket.rs  stack.rs  sync.rs  system_config.rs  system_metadata.rs  tag.rs  timeline.rs  trash.rs  user.rs  user_admin.rs  view.rs  workflow.rs
server-rs/src/dtos/: album.rs  asset.rs  auth.rs  memory.rs  mod.rs  notification.rs  server.rs  system_metadata.rs  timeline.rs  user.rs
server-rs/src/middleware/: auth.rs
web/: Dockerfile  nginx.conf  vite.config.ts
