[package]
name = "server-rs"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
envy = "0.4"
dotenvy = "0.15"
semver = "1.0"
anyhow = "1.0"
bcrypt = "0.15"
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
base64 = "0.22"
